--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -142,7 +142,7 @@ _extending the use of GDPs beyond the initial use to diverse mediational uses an
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
-## Initial broad commentary on Vignette 2
+## Extract and commentary on Vignette 2
 
 In this section, I provide an overview of the specifics of the learning design and participant interactions. Beyond providing the reader with an illustrative example of partner work in game coding, this commentary begins to surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter. To achieve this, I use a vignette to capture a snapshot of the interactions within one family, as it includes several aspects of activity that incorporate the use of GDP concepts. A truncated table presents participant dialogue, screenshots and a description of their interactions, including gestures, followed by a summary interpretation of these interactions. A more extended extract of dialogue, activity description and commentary is available in Vignette 2 in the appendices.
 
@@ -175,27 +175,18 @@ Outer pipes Cell padding
 | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------- |
 | Olivia: Laughs                                                                                                                                                                                                                                                                                                        | Olivia moves laptop to point towards her and takes over using the keyboard                                    |
 | ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdbBLx7bPs95968MajDa3VWAUCAp1jPiTcL96iD-YRLMVGf6rCoygDF_c4n4LqZl4Gp_iAu-W17vHpumhkEeway-Uab-0wC_06qE0q9yebGiNVCf2DQlbw5RPbJDc8whRcNS7LLYqTQOLvXZaFe1mzkO24?key=WwYhhFgd0-gHsomX3t0R_g)                                                                            |
-| On the Screen: Olivia is uses the keyboard’s arrow keys to control the game player. She checks the desired behaviour of the player progressing to level 2 after collecting a key and then traveling to a door - is working. It does and Olivia  progresses to level 2 of their game where there is not a door or key. |
+| On the Screen: Olivia is uses the keyboard’s arrow keys to control the game player. She checks the desired behaviour of the player progressing to level 2 after collecting a key and then travelling to a door - is working. It does and Olivia  progresses to level 2 of their game where there is not a door or key. |
 
-
-### Short Descriptive Commentary on Vignette 2
-
-For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game.
+<!-- ### Short Descriptive Commentary on Vignette 2 -->
 
 <!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
-
-
 <!-- **Skilful parental work to sustain engagement** -->
-
-The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to do so. When the code problem has been solved, she signals  to her child that is her turn to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game.
-
-The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
-
-The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to a state suitable for ideation and design within the scope of the child. The completion of a coding task indicating that she is aware of the greater possibility for effective child input at this stage. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
-
-
 <!-- **Challenge and initiative** -->
 <!-- **Lingua franca** -->
+
+For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the online course manual textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
+
+The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to do so. When the code problem has been solved, she signals to her child that is her turn to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
 
 The child also show initiative, in particular in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the name of game design patterns they are working on (_Adding Levels_ and  _Keys and Doors_ ) (Key 44 in Vignette 2). There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction. The use of GDPs terms as a lingua franca, a concept underpinning the utility of design pattern more generally [@erickson_lingua_2000], to help design for others is explored in the next section. More broadly the use of GDP concepts as an evolving design language to give feedback, to share knowledge, request and for other uses during community activity,  pair interactions and individual work are explored in following sections.
 
@@ -230,7 +221,7 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities.
+Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis, the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, her later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic; examining existing and emerging norms and repertoires adapted from participants participation in other communities and contexts.
 
 ### The role of GDPs to facilitate learners to design for others
 
@@ -334,14 +325,17 @@ Within the emerging idioculture of the game making sessions, and during playtest
    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-In addition to peer feedback, in P2 myself and other facilitators would often provoke informal reflection on project progress through asking what patterns they were currently working or had recently completed.
+**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on for practical help, and similar examples (see also that of Nadine in Vignette 5), were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
+
+
 EVIDENCE? PRESENCE / FREQUENCY?  
 
 Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
 <!-- NOTE ADD MORE EVIDENCE? -->
 
-**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on, on a practical level, and similar examples,(see also that of Nadine in Vignette 5) were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
 
 <!-- The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. -->
 
@@ -358,16 +352,16 @@ DEVELOP
 
 These novelties may emerge spontaneously or have a source in  part participants' funds of gaming knowledge. In either case once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and use approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
 
+
+<!-- ### Summary of cultural section - and signposting to next chapter -->
+
 **synthesis of this section**
 
-### Summary of cultural section - and signposting to next chapter
-
-This section has explored the use of GDPs as within strategies and processes that occur at a community level in way which demonstrate the transfer between different activity systems in a way which supports the perspective of Gutiérrez [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning.  Playtesting a medium for an a shared idioculture to emerge and as such became a significant part of pedagogy of the learning design. While the design processes directly linked implementing GDPs were one of the most significant in video data others were present. The role of playtesting and other community interactions including warm up games, session reflections are explored in relation to the development of agency in the following chapter.
-
+This section has explored the use of GDPs as within strategies and processes that occur at a community level in way which demonstrate the transfer between different activity systems in a way which supports the perspective of Gutiérrez [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning. Playtesting a medium for an a shared idioculture to emerge and as such became a significant part of pedagogy of the learning design. While the design processes directly linked implementing GDPs were one of the most significant in video data others were present. The role of playtesting and other community interactions including warm up games, session reflections are explored in relation to the development of agency in the following chapter.
 
 ## GDPs used in the process of guided participation (Target 2500)
 
-This section explores data on the use of GDP from the perspective of interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. From observations of video data, I observe how GDPs are used in diverse  meditational strategies by different participants.
+This section explores data on the use of GDP from the perspective of interpersonal interaction. Here the process of being guided into planned activity or peer work is exploratory contributing to interpersonal processes which serve the completion of the activity. From observations of video data, I describe five categories of how GDPs are used in diverse meditational strategies most frequently through pair participants interaction.
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
@@ -389,9 +383,7 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 At the cultural level of analysis of activity, the previous section  outlined that providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section also examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on an interpersonal plane of activity.
 
-The previous chapter explored, from my perspective as a facilitator, the use of a menu of GDPs helped address a the tension between of participant choice the need for supporting materials on code implementation. Vignette 9, shows one of the few short episodes of my addressing the whole group class talk where I outline the webpage listing the menu of patterns _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_
-
-Given this integration of this decision into the learning design from P2 onwards, it would appear natural that participant use the provided framework. However the evolving use of this documentation, the variations within that use and interpersonal interactions use merit attention.
+The previous chapter explored, from my perspective as a facilitator, the use of a menu of GDPs helped address a the tension between of participant choice the need for supporting materials on code implementation. Vignette 9, shows one of the few short episodes of my addressing the whole group class talk where I outline the webpage listing the menu of patterns _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to the use of written documentation as a framework, in P2 I guided supporting student facilitators to ask what patterns they were currently working or had recently completed as a way of provoking informal reflection on project progress. Given this integration of these elements into the learning design from P2 onwards, it would appear natural that participant use the provided framework at least in some ways. Despite this, the evolving use of this documentation, the variations within that use and interpersonal interactions use merit attention due to the diversity, evolution and fundamental importance of use of GDPs at this interpersonal scope.
 
 <!-- The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution. -->
 
@@ -399,11 +391,12 @@ Given this integration of this decision into the learning design from P2 onwards
 Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
 other COMMENTs HERE -->
 
-Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored later) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
+Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
 
-By way of contrast, Vignette.toby showed the child shares an independent style with Suzanna but engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+By way of contrast, Toby in Vignette 1 engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games. (EXPLORED ABOVE?)
 
-OTHER DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
+OTHER DATA CALL HERE -
+Examples from the data of participants using GDPs as a framework for organisation and project navigations.
 
 <!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
 
@@ -426,7 +419,7 @@ At this phase of research documentation included; comment help within the game t
 
 
 
-<!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages.
+<!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making comshowed the child sharing an independent style with Suzanna butmunity from early stages.
 However, to overcome scarcity of facilitator support, direct help processes were seeded by other forms of support resources and written documentation. -->
 
 
