tidying files data

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -10,16 +10,15 @@ number-sections: true
 categories: chapter
 title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
+
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
         -   [Word count](#word-count)
     -   [Introduction](#introduction)
-    -   [Initial broad commentary on Vignette
-        2](#initial-broad-commentary-on-vignette-2)
-        -   [Short Descriptive Commentary on Vignette
-            2](#short-descriptive-commentary-on-vignette-2)
+    -   [Extract and commentary on Vignette
+        2](#extract-and-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -28,8 +27,6 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
-        -   [Summary of cultural section - and signposting to next
-            chapter](#summary-of-cultural-section---and-signposting-to-next-chapter)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
@@ -76,6 +73,7 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Future work on abstraction, layers of abstraction GDPs and
             the MDA
             framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -682,7 +680,15 @@ Once the code for the new game mechanic has been added, the child is guided to t
 <!-- tool use, technical processes and specialist language -->
 <!-- EDIT DOWN ALREADY COVERED IN CHAP 5? -->
 
-Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making. Example of technical processes can be found in exporting graphical files in Appendix.Molly, in _code patching_ (see glossary for terms in italics) in Appendix 1. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. Even introduced processes evolved, being modified by the community.
+Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making.
+
+SUMMARISE HOW
+
+The above example from Vignette  details Molly getting help in exporting graphical files to be imported into the game code project is example of GDPs taking a role in the development of technical processes. Here the parent needs to learn or at least to draw on peer knowledge to complete the implementation of her chosen pattern. Similarly later, Molly is helped in the use of the cropping tool by a peer child Ed(c)
+
+A further example is the the process in _code patching_ (see glossary for terms in italics) in Appendix 1.
+
+Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. Even introduced processes evolved, being modified by the community.
 
 Thus while use and propagation of new technical processes were often motivated by a drive to implement or complete a GDPs, the following observations bear in mind that the relationship between GDPs and emergent technical processes is complex and interdependent rather than assuming that GDPs directly facilitate emerging tool use.
 
@@ -852,8 +858,6 @@ While I address areas for future research in the conclusion, a proposed benefit 
 ### Discussion of findings in relation to Computational Thinking and  abstraction
 
 
-
-
 #### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
@@ -868,6 +872,7 @@ Waite's interpretation of levels of abstraction and semantic waves in a computin
 
 While, none of the author's above are clear about what exactly is meant by the abstract in their explorations, a synthesis of relevant literature supports an spectrum of abstraction, from Wing's take on CT at the most abstract, and specifics coding constructs or even syntax at the most concreted. Such a spectrum is in is broadly in line with LOA interpretation, although the purpose is shown as the higher level of abstraction. ANY DIFFERENCES?
 
+PERHAPS BRING UP UP TO DATE ISSUE OF TRANSFER. - BUT PERHAPS LEAVE FOR CONCLUSION.
 
 This direction of the findings of this chapter, support findings on design patterns in other contexts as a middle ground between abstract CT concepts and more concrete techniques.
 
@@ -885,8 +890,6 @@ Turning to alignment with PBL research in digital making, as explored in the lit
 Despite this, in terms of participant experiences, it is clear from this chapters findings that learners _are_ shifting between LOA without explicit in the process of the use of and contribution to this learning design. Participant perspectives shift between the wider goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. In this context I judged the imposition of an additional goal of understanding abstract curricular concepts as potentially counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern also reflected potential disorientation and reduced experiences of agency from imposed shifts of focus rather than self-initiated ones. I also propose that to further research to would be needed to justify the utility take the time to interrupt flow to explicitly teach abstraction, and abstract CT concepts, apart from if understanding of such concepts are required by curriculum constraints.
 
 On the other hand, my reflections support a proposition that there is utility for facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment. According to [@barendregt_intermediate-level_2018], in their identification of design patterns as intermediate level construct, identifying a suitable the level of abstraction is recommended to best support the goals of learners FIND REASON.  Waite and colleagues [@waite_abstraction_2018-1], also identify the intermediate design level of the LOA model as that suitable for supporting grounded abstraction in learner coding. In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021]. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
-
-
 
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
@@ -907,8 +910,6 @@ As previously explored I had a reluctance to shift learners away from the practi
 RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
 
 Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with  Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
-
-
 
 In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
