--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -4,10 +4,8 @@
         2024](#research-questions---march-2024)
         -   [Word count](#word-count)
     -   [Introduction](#introduction)
-    -   [Initial broad commentary on Vignette
-        2](#initial-broad-commentary-on-vignette-2)
-        -   [Short Descriptive Commentary on Vignette
-            2](#short-descriptive-commentary-on-vignette-2)
+    -   [Extract and commentary on Vignette
+        2](#extract-and-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -16,8 +14,6 @@
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
-        -   [Summary of cultural section - and signposting to next
-            chapter](#summary-of-cultural-section---and-signposting-to-next-chapter)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
